crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__usage-dark-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
| 5h    ########------------  38%  |
| week  ###############-----  74%  |
| day   ##################--  91%  |
| idle  --------------------   0%  |

 0   0..7   fg=#7f8492 bg=#111216
 0   7..15  fg=#7aa2f7 bg=#111216
 0  15..27  fg=#3b3f4a bg=#111216
 0  27..32  fg=#7aa2f7 bg=#111216
 0  32..34  fg=#e6e6e6 bg=#111216
 1   0..7   fg=#7f8492 bg=#111216
 1   7..22  fg=#e0af68 bg=#111216
 1  22..27  fg=#3b3f4a bg=#111216
 1  27..32  fg=#e0af68 bg=#111216
 1  32..34  fg=#e6e6e6 bg=#111216
 2   0..7   fg=#7f8492 bg=#111216
 2   7..25  fg=#f7768e bg=#111216
 2  25..27  fg=#3b3f4a bg=#111216
 2  27..32  fg=#f7768e bg=#111216
 2  32..34  fg=#e6e6e6 bg=#111216
 3   0..7   fg=#7f8492 bg=#111216
 3   7..27  fg=#3b3f4a bg=#111216
 3  27..32  fg=#7aa2f7 bg=#111216
 3  32..34  fg=#e6e6e6 bg=#111216
