crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__usage-light-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
| 5h    ########------------  38%  |
| week  ###############-----  74%  |
| day   ##################--  91%  |
| idle  --------------------   0%  |

 0   0..7   fg=#6b6f7a bg=#ffffff
 0   7..15  fg=#2f5bb7 bg=#ffffff
 0  15..27  fg=#c6cad3 bg=#ffffff
 0  27..32  fg=#2f5bb7 bg=#ffffff
 0  32..34  fg=#1c1c1c bg=#ffffff
 1   0..7   fg=#6b6f7a bg=#ffffff
 1   7..22  fg=#a86b00 bg=#ffffff
 1  22..27  fg=#c6cad3 bg=#ffffff
 1  27..32  fg=#a86b00 bg=#ffffff
 1  32..34  fg=#1c1c1c bg=#ffffff
 2   0..7   fg=#6b6f7a bg=#ffffff
 2   7..25  fg=#c4334b bg=#ffffff
 2  25..27  fg=#c6cad3 bg=#ffffff
 2  27..32  fg=#c4334b bg=#ffffff
 2  32..34  fg=#1c1c1c bg=#ffffff
 3   0..7   fg=#6b6f7a bg=#ffffff
 3   7..27  fg=#c6cad3 bg=#ffffff
 3  27..32  fg=#2f5bb7 bg=#ffffff
 3  32..34  fg=#1c1c1c bg=#ffffff
